<resources>
    <string name="app_name">SYNALLAGí</string>
    <string name="text_username">Username</string>
    <string name="text_password">Password</string>
    <string name="text_name">Name</string>
    <string name="text_age">Age</string>
    <string name="text_confirm_password">Confirm Password</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="text_email">Email Address</string>
    <string name="button_log_out">Log Out</string>
    <string name="text_register_here">New here? Register Here</string>
    <string name="cart">Cart</string>
    <string name="acc">acc</string>
    <string name="product_list">Product List</string>
    <string name="limited_product">Limited Product</string>
    <string name="health_care">Health Care</string>
    <string name="electronic_device">Electronic Device</string>
    <string name="clothed">Clothed</string>
    <string name="mask1">3-Ply Face Mask 50 PCS/BOX</string>
    <string name="price_Mask1">RM10.05</string>
    <string name="mask2">Bareno 3 ply Face Mask 50PCS/BOX</string>
    <string name="price_Mask2">RM11.00</string>
    <string name="clothed1">Summer dress Korean version T-shirt</string>
    <string name="price_clothed">RM35.90</string>
    <string name="clothed2">Women White And Black Color Colour Casual Long Sleeve Stripe Shirt</string>
    <string name="price_clothed2">RM14.85</string>
    <string name="text_phone_number">Phone Number</string>
    <string name="electronic1">Baseus USB Light Mosquito Killer Lamp</string>
    <string name="price_electronic1">RM85.16</string>
    <string name="electronic2">Midea MFW-EC950 9.5KG Fully Auto Washing Machine</string>
    <string name="price_electrionic2">RM709.00</string>
    <string name="electronic3">Sony PlayStation 4 Pro 1TB Console - PS4 Pro</string>
    <string name="price_eletronic3">RM1874.00</string>
    <string name="healthcare3">Blackmores Vitamin C 500 60s x 2</string>
    <string name="price_healthcare3">RM49.00</string>
    <string name="clothed3">Women Spring Body Reflective Cotton Streetwear</string>
    <string name="price_clothed3">RM18.80</string>
    <string name="limitedproduct">HUAWEI NOVA 7I 8GB + 128GB Smartphone</string>
    <string name="price_limited_product">RM1099.00</string>
    <string name="limitedproduct2">Apple iPhone 11 Pro Max 64GB</string>
    <string name="price_limited_product2">RM4703.02</string>
    <string name="limitedproduct3">Nintendo Switch V2 Battery Enhanced Console / Neon Blue/Red Set and Gray Joy‑Con Set</string>
    <string name="price_limited_product3">RM1629.00</string>
    <string name="fb">SYNALLAGí Home Page</string>
    <string name="email">SYNALLAGí@gmail.com</string>
    <string name="about_us">About Us</string>
    <string name="phone">03-1111-1111</string>
    <string name="feedback">Feedback</string>
    <string name="user_account">User Account</string>
    <string name="Open">NavBar</string>
    <string name="Close">NavBar</string>
    <string name="realmeTitle">RealMe 6 Pro</string>
    <string name="realme_price">RM 179.00</string>
    <string name="colour_heading">Please select a colour:</string>
    <string name="red_text">RED</string>
    <string name="blue_text">BLUE</string>
    <string name="add_to_chart">ADD TO CHART</string>
    <string name="black_text">BLACK</string>
    <string name="quantity_header">Quantity</string>
    <string name="plus_icon">+</string>
    <string name="zero">0</string>
    <string name="minus_icon">-</string>
    <string name="specificatons_header">Specifications</string>
    <string name="service_header">Service</string>
    <string name="product_description_header">Product Description</string>
    <string name="xiaomi_price">RM 579.00</string>
    <string name="xiaomi_title">Redmi Note 8</string>
    <string name="purple_text">PURPLE</string>
    <string name="nintendo_price">RM 1629.00</string>
    <string name="nintendo_title">Nintendo Switch V2</string>
    <string name="neon_text">NEON</string>
    <string name="grey_text">GREY</string>
    <string name="mosquito_killer_title">Baseus Mosquito Killer Lamp</string>
    <string name="white_text">WHITE</string>
</resources>