<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClothedActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:background="#FFEB3B">

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/clothed" />

    <TextView
        android:id="@+id/CL"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_below="@+id/imageView6"
        android:layout_alignParentStart="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="0dp"
        android:text="@string/clothed1" />

    <TextView
        android:id="@+id/PCL"
        android:layout_width="150dp"
        android:layout_height="29dp"
        android:layout_below="@+id/CL"
        android:layout_alignParentStart="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="0dp"
        android:text="@string/price_clothed" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/clothed1" />

    <TextView
        android:id="@+id/CL2"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_below="@+id/imageView7"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="32dp"
        android:text="@string/clothed2" />

    <TextView
        android:id="@+id/PCL2"
        android:layout_width="152dp"
        android:layout_height="27dp"
        android:layout_below="@+id/CL2"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="32dp"
        android:text="@string/price_clothed2" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/PCL"
        android:layout_alignParentStart="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/clothed2" />

    <TextView
        android:id="@+id/CL3"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_below="@+id/imageView12"
        android:layout_alignParentStart="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="0dp"
        android:text="@string/clothed3" />

    <TextView
        android:id="@+id/PCL3"
        android:layout_width="150dp"
        android:layout_height="29dp"
        android:layout_below="@+id/CL3"
        android:layout_alignParentStart="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="0dp"
        android:text="@string/price_clothed3" />

</RelativeLayout>