<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ElectronicDeviceActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:background="#FFEB3B">

    </androidx.appcompat.widget.Toolbar>


    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/electricdevice" />

    <TextView
        android:id="@+id/ED1"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_below="@+id/imageView8"
        android:layout_alignParentStart="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="0dp"
        android:text="@string/electronic1" />

    <TextView
        android:id="@+id/EDP1"
        android:layout_width="150dp"
        android:layout_height="29dp"
        android:layout_below="@+id/ED1"
        android:layout_alignParentStart="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="0dp"
        android:text="@string/price_electronic1" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/electricdevice1" />

    <TextView
        android:id="@+id/ED2"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_below="@+id/imageView9"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="32dp"
        android:text="@string/electronic2" />

    <TextView
        android:id="@+id/PED2"
        android:layout_width="150dp"
        android:layout_height="29dp"
        android:layout_below="@+id/ED2"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="32dp"
        android:text="@string/price_electrionic2" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/EDP1"
        android:layout_alignParentStart="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="19dp"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/electricdevice3" />

    <TextView
        android:id="@+id/ED3"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_below="@+id/imageView10"
        android:layout_alignParentStart="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="0dp"
        android:text="@string/electronic3" />

    <TextView
        android:id="@+id/PED3"
        android:layout_width="150dp"
        android:layout_height="29dp"
        android:layout_below="@+id/ED3"
        android:layout_alignParentStart="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="0dp"
        android:text="@string/price_eletronic3" />


</RelativeLayout>