<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.assignment_tsr_ywh_nkh_tyc_wrk.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:background="#FFEB3B"
        app:menu="@menu/optionalmenu">

        <Spinner
            android:id="@+id/product_list"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:layout_marginTop="4dp"
            android:hint="@string/product_list"
            android:spinnerMode="dialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

    </androidx.appcompat.widget.Toolbar>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mask1"
                android:layout_width="152dp"
                android:layout_height="31dp"
                android:layout_below="@+id/imageView"
                android:layout_alignParentStart="true"
                android:layout_marginStart="33dp"
                android:layout_marginTop="0dp"
                android:text="@string/mask1" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="152dp"
                android:layout_height="29dp"
                android:layout_below="@+id/mask1"
                android:layout_alignParentStart="true"
                android:layout_marginStart="33dp"
                android:layout_marginTop="0dp"
                android:text="@string/price_Mask1" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="32dp"
                app:srcCompat="@drawable/mask2" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="148dp"
                android:layout_height="31dp"
                android:layout_below="@id/imageView2"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="33dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="34dp"
                android:text="@string/mask2" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="38dp"
                android:layout_marginTop="100dp"
                app:srcCompat="@drawable/mask1" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="149dp"
                android:layout_height="25dp"
                android:layout_below="@+id/textView2"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="34dp"
                android:text="@string/price_Mask2" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_below="@+id/textView"
                android:layout_alignParentStart="true"
                android:layout_marginStart="39dp"
                android:layout_marginTop="50dp"
                app:srcCompat="@drawable/clothed" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="152dp"
                android:layout_height="34dp"
                android:layout_below="@+id/imageView3"
                android:layout_alignParentStart="true"
                android:layout_marginStart="33dp"
                android:layout_marginTop="0dp"
                android:text="@string/clothed1" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="152dp"
                android:layout_height="30dp"
                android:layout_below="@+id/textView4"
                android:layout_alignParentStart="true"
                android:layout_marginStart="33dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="34dp"
                android:text="@string/price_clothed" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_below="@+id/textView3"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="44dp"
                app:srcCompat="@drawable/clothed1" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="150dp"
                android:layout_height="35dp"
                android:layout_below="@+id/imageView4"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="34dp"
                android:text="@string/clothed2" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="152dp"
                android:layout_height="30dp"
                android:layout_below="@+id/textView6"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="34dp"
                android:text="@string/price_clothed2" />


        </RelativeLayout>

</RelativeLayout>

