<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<LinearLayout
    android:id="@+id/toolbarLayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:background="#FFEB3B">

    </androidx.appcompat.widget.Toolbar>
</LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbarLayout">

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            app:srcCompat="@drawable/facebook" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="321dp"
            android:layout_height="34dp"
            android:layout_marginTop="25dp"
            android:layout_toEndOf="@+id/imageView15"
            android:text="@string/fb" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            app:srcCompat="@drawable/ic_baseline_person_24"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="321dp"
            android:layout_height="34dp"
            android:layout_marginTop="25dp"
            android:layout_toEndOf="@+id/imageView15"
            android:text="@string/email" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <ImageView
            android:id="@+id/imageView19"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:src="@drawable/ic_baseline_local_phone_24" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="321dp"
            android:layout_height="34dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="25dp"
            android:text="@string/phone" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView19"
            android:textStyle="bold"
            android:textSize="20dp"
            android:background="#FFEB3B"
            android:layout_marginStart="4dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="-1dp"
            android:text="@string/feedback" />

        <EditText
            android:id="@+id/Comment"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
    </LinearLayout>

    <Button
        android:id="@+id/sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:text="Submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />


</androidx.constraintlayout.widget.ConstraintLayout>